--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -78,6 +78,18 @@ input[type=submit]{
     cursor: pointer;
 }
 
+nput[type=button]{
+    border: none;
+    padding: 10px 20px;
+    margin-right: 15px;
+    color: #ECEEF1;
+    background: #27313D;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
 
 input[type=submit]:hover{
     background: #1b2129;
